--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
 				background-color:#dfdfff;
 				cursor:default;
 			}
-			.tr_result_car:hover
+			/* .tr_result_car:hover
 			{
 				background-color:#bfbfff;
-			}
+			} */
 		</style>
 	</head>
 	<body style="margin:0px;" onresize="set_size()">
